--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "client": "cd client && npm run start",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "seed:members": "node scripts/addMembers/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
