--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
+    "concurrently": "^4.1.1",
     "axios": "^0.19.0",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
     "if-env": "^1.0.4",
-    "mongoose": "^5.6.9",
-    "passport": "^0.4.0",
-    "passport-meetup-oauth2": "0.0.2"
+    "mongoose": "^5.6.9"
   },
   "devDependencies": {
-    "concurrently": "^4.1.1",
     "morgan": "^1.9.1"
   },
   "scripts": {
